# LMA

./: CMakeLists.txt  README.md  public.cmake.in
examples/animate_sphere/: CMakeLists.txt
examples/bal/: CMakeLists.txt
examples/bal/src/: bal.cpp  lma.cpp  lma.hpp  pb_loader.hpp
examples/circle/: CMakeLists.txt
examples/circle/src/: circle.cpp
examples/convert_camera_model/: CMakeLists.txt
examples/convert_camera_model/src/: modules.hpp
examples/dependencies_graph/: CMakeLists.txt
examples/dependencies_graph/src/: dependencies_graph.cpp
examples/derivatives/: CMakeLists.txt
examples/libv-ba/: CMakeLists.txt
examples/libv-ba/src/: libv-ba.cpp
examples/rosenbrock/: CMakeLists.txt
examples/rosenbrock/src/: main.cpp
examples/sphere/: CMakeLists.txt
examples/sphere/src/: main.cpp
src/libv/lma/: lma.hpp
src/libv/lma/graph/: graph.hpp  nodes.hpp
src/libv/lma/lm/algo/: levmar.hpp
src/libv/lma/lm/ba/: container.hpp  create_hessian.hpp  fill_hessien.hpp  fonctorba.hpp  ldlt.hpp  meta_prod.hpp  pcg.hpp  tuple_to_mat.hpp  utils.hpp
src/libv/lma/lm/bundle/: bundle10.hpp  bundle_utils.hpp  (+1 more)
src/libv/lma/numeric/: mediane.hpp
src/libv/lma/time/: time.hpp
tests/: ad.cpp  adct.cpp  all_solver.cpp  all_solver2.cpp  check_analytical.cpp  copy_f.cpp  cost_and_save.cpp  create_hessian.cpp  derivatives.cpp  dynamic_vs_static.cpp  explicit.cpp  for_each_combinaison.cpp  functor_dispatch.cpp  is_invalid.cpp  llt.cpp  mestimator.cpp  meta_prod.cpp  pcg.cpp  product_table_vector.cpp  rename.cpp  residuals.cpp  simple4.cpp  to_ref.cpp  unroll.cpp
(+35 files in other folders)
